--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Just start java8 application and enter author name in console.
+Just start as the java application and enter author name in console.
 Program will form two files with titles and words
